--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,13 +206,13 @@ footer p {
 body.contact input {
     border: 1px solid #ddd;
     padding: 10px 0 10px 10px;
-    width: 880px;
+    width: 100%;
 }
 
 body.contact textarea {
     border: 1px solid #ddd;
     padding: 10px 0 10px 10px;
-    width: 880px;
+    width: 100%;
 }
 
 body.contact button {
